--- a/_posts/2015-02-07-Last-Time.md
+++ b/_posts/2015-02-07-Last-Time.md
@@ -4,20 +4,22 @@ title: A New Beginning
 published: true
 ---
 
-After almost six months, I have reinitialized NARM with a different perspective. The New NARM2.0 is completely different from my old team. This is fueled with all my experience and expertise that I gained from IIT KGP and BARC. Previously, the entire team was like a group of interested and motivated people curious to learn the art of mechatronics. We had no funds at all, no guidance other than what I and Arjun used to teach the juniors, no support from the college or any other institute but we still worked. We worked hard without any expectations like a blind man fondering in the dark. All my juniors had pinned their hopes on me and I had nothing for them except disappointment and utter failure. Soon I realized, NARM was going nowhere. NARM was created with a vision in mind - the first research group where people not just learnt for the fun of learning but contributed to actual research in robotics. We were neither a team nor a club nor a forum but a combination of all three. But to realize that vision, I had to be more than I was then. I needed to evolve myself and learn more to do stuff that had an impact in the world. I needed to understand research that could contribute to the world. Only then could I take the responsibility to guide others. I was so burdened with this thought that I had to take the long road to knowledge. 
-Then came another obstacle- from where will you learn. Of course, professors in my college knew very little about robotics. Seniors, well, they only know what are taught in the workshops. The only option left is to take external help - Internships.
+After almost six months, I have reinitialized NARM with a different perspective. The New NARM2.0 is completely different from my old team. This is fueled with all my experience and expertise that I gained from IIT KGP and BARC. 
+Previously, the entire team was like a group of interested and motivated people curious to learn the art of mechatronics. We had no funds at all, no guidance other than what I and Arjun used to teach the juniors, no support from the college or any other institute but we still worked. We worked hard without any expectations like a blind man fondering in the dark. All my juniors had pinned their hopes on me and I had nothing for them except disappointment and utter failure. 
+Soon I realized, NARM was going nowhere. NARM was created with a vision in mind - _the first research group where people not just learnt for the fun of learning but contributed to actual research in robotics_. We were neither a team nor a club nor a forum but a combination of all three. But to realize that vision, I had to be more than I was then. I needed to evolve myself and learn more to do stuff that had an impact in the world. I needed to understand research that could contribute to the world. Only then could I take the responsibility to guide others. I was so burdened with this thought that I had to take the long road to knowledge. Then came another obstacle- from where will you learn. Of course, professors in my college knew very little about robotics. Seniors, well, they only know what are taught in the workshops. The only option left is to take external help - Internships.
 
 
 ##Bhabha Atomic Research Center (BARC)
 I went to BARC with a lot of expectations. I was thirsty for knowledge and wanted to learn the art of robotics from the experts. Sadly, I was disappointed. Like all government bodies, it too had a slow working style. The scientists there were very theoretical in their knowledge of robotics and they were busy in getting papers published while the interns and junior scientists did most of the practical work. This was a good oppurtunity for me as I got access to very high end hardware which I could only dream of in college. I also got introduced to the Robot operating System, a software architecture built specifically to design robots. But my enthusiasim and energy did not last long. I soon corrupted by the languid atmosphere, laid back lifestyle, loving friends and the amazing city, Mumbai. In no less than a few weeks, I lost all interest in my work and devoted my entire time to pleasure.
 After weeks of enjoyment and fun, all my friends were gone as their college had reopened and I was left all alone. All my sense of purpose suddenly kicked in and within a week I managed to complete a majority of the project before the final presentation. Any ways, I got hands-on experience in working with autonomous navigation which helped me a lot.
 Check out [Project Auroman](http://projectauroman.blogspot.in/), if you have time.
-
+![BARC](/https://raw.githubusercontent.com/sgang007/sgang007.github.io/master/images/Last%20Time/barc.JPG)
 
 I had to learn more to make up for the time that I lost. I was looking for oppurtunities to learn more stuff. I applied to a lot of German Universities but sadly, got declined. I lost hope and applied to this startup Auro Robotics at IIT KGP and I got selected. I never had any hopes from a startup from IIT KGP where BARC scientists disappointed me. Nevertheless, I took a risk and dived in.
 
 ##Auro Robotics
 Well, I might have had little hopes from here but Auro Robotics astounded me. I learned a ton of stuff even while earning a stipend. Just amazing, I was getting paid to learn. First, I had to build up my C++ skills which were a disaster. So, I took the time and learned my way around good C++ programming. Next, I completed all the pending courses that I had not completed until now. IIT KGPians- you guys are lucky to have such high speed internet all the time. After, I cleared of my coding skills, I was given some hardware work on the vehicle steering. It exposed all my flaws in designing good hardware and I improved myself a lot. Jit is a brilliant and an amazing person who helped me a lot to understand how to properly lead a team. 
+![Auro](/https://raw.githubusercontent.com/sgang007/sgang007.github.io/master/images/Last%20Time/auro.jpg)
 
 Finally, after six months I was in a position to realize the vision I had long back.
 I returned to my college and started working with Prof. Sandipan Karmakar who helped me a lot in undestanding the mathematics behind the working of the robot's brain. 
@@ -28,6 +30,3 @@ And after all the trouble, Project Sangi has started. The estimated budget of th
 Finally, I see the light simmering at the end of this dark tunnel I had been travelling all along and this new spark of hope gives me the energy and the confidence to once again believe: I can and I will do it, whatever it takes.
 
 I sincere 'Thank you' to all my team members and friends, who supported me in this journey.
-
-
-
