--- a/_posts/2015-02-07-Last-Time.md
+++ b/_posts/2015-02-07-Last-Time.md
@@ -9,7 +9,7 @@ Previously, the entire team was like a group of interested and motivated people 
 Soon I realized, NARM was going nowhere. NARM was created with a vision in mind - _the first research group where people not just learnt for the fun of learning but contributed to actual research in robotics_. We were neither a team nor a club nor a forum but a combination of all three. But to realize that vision, I had to be more than I was then. I needed to evolve myself and learn more to do stuff that had an impact in the world. I needed to understand research that could contribute to the world. Only then could I take the responsibility to guide others. I was so burdened with this thought that I had to take the long road to knowledge. Then came another obstacle- from where will you learn. Of course, professors in my college knew very little about robotics. Seniors, well, they only know what are taught in the workshops. The only option left is to take external help - Internships.
 
 
-##Bhabha Atomic Research Center (BARC)
+#Bhabha Atomic Research Center (BARC)
 I went to BARC with a lot of expectations. I was thirsty for knowledge and wanted to learn the art of robotics from the experts. Sadly, I was disappointed. Like all government bodies, it too had a slow working style. The scientists there were very theoretical in their knowledge of robotics and they were busy in getting papers published while the interns and junior scientists did most of the practical work. This was a good oppurtunity for me as I got access to very high end hardware which I could only dream of in college. I also got introduced to the Robot operating System, a software architecture built specifically to design robots. But my enthusiasim and energy did not last long. I soon corrupted by the languid atmosphere, laid back lifestyle, loving friends and the amazing city, Mumbai. In no less than a few weeks, I lost all interest in my work and devoted my entire time to pleasure.
 After weeks of enjoyment and fun, all my friends were gone as their college had reopened and I was left all alone. All my sense of purpose suddenly kicked in and within a week I managed to complete a majority of the project before the final presentation. Any ways, I got hands-on experience in working with autonomous navigation which helped me a lot.
 Check out [Project Auroman](http://projectauroman.blogspot.in/), if you have time.
