--- a/_posts/2015-02-07-Last-Time.md
+++ b/_posts/2015-02-07-Last-Time.md
@@ -15,14 +15,14 @@ After weeks of enjoyment and fun, all my friends were gone as their college had 
 Check out [Project Auroman](http://projectauroman.blogspot.in/), if you have time.
 ![_1](https://raw.githubusercontent.com/sgang007/sgang007.github.io/master/images/barc.JPG)
 
-I had to learn more to make up for the time that I lost. I was looking for oppurtunities to learn more stuff. I applied to a lot of German Universities but sadly, got declined. I lost hope and applied to this startup Auro Robotics at IIT KGP and I got selected. I never had any hopes from a startup from IIT KGP where BARC scientists disappointed me. Nevertheless, I took a risk and dived in.
+---I had to learn more to make up for the time that I lost. I was looking for oppurtunities to learn more stuff. I applied to a lot of German Universities but sadly, got declined. I lost hope and applied to this startup Auro Robotics at IIT KGP and I got selected. I never had any hopes from a startup from IIT KGP where BARC scientists disappointed me. Nevertheless, I took a risk and dived in.
 
 ##Auro Robotics
 Well, I might have had little hopes from here but Auro Robotics astounded me. I learned a ton of stuff even while earning a stipend. Just amazing, I was getting paid to learn. First, I had to build up my C++ skills which were a disaster. So, I took the time and learned my way around good C++ programming. Next, I completed all the pending courses that I had not completed until now. IIT KGPians- you guys are lucky to have such high speed internet all the time. After, I cleared of my coding skills, I was given some hardware work on the vehicle steering. It exposed all my flaws in designing good hardware and I improved myself a lot. Jit is a brilliant and an amazing person who helped me a lot to understand how to properly lead a team. 
 ![_2](https://raw.githubusercontent.com/sgang007/sgang007.github.io/master/images/auro.jpg)
 
-Finally, after six months I was in a position to realize the vision I had long back.
-I returned to my college and started working with Prof. Sandipan Karmakar who helped me a lot in undestanding the mathematics behind the working of the robot's brain. 
+---Finally, after six months I was in a position to realize the vision I had long back.
+---I returned to my college and started working with Prof. Sandipan Karmakar who ---helped me a lot in undestanding the mathematics behind the working of the robot's brain. 
 
 ##NARM Sangi
 And after all the trouble, Project Sangi has started. The estimated budget of the project is very low and I have invested most of my earnings from KGP in this project. With help of Prof. Sandipan and some external aid if required, we should have a sufficient investment to build the first version of Sangi. We managed to get a room and lab for our work with high speed internet connectivity. Last of all, we have a well organized plan and a timeline to increase work productivity. If all goes well, we should have the first version ready by May, 2015 and two abstract for presenting to the next IEEE conference after June, 2015. 
