--- a/_posts/2015-02-07-Last-Time.md
+++ b/_posts/2015-02-07-Last-Time.md
@@ -8,7 +8,7 @@ After almost six months, I have reinitialized NARM with a different perspective.
 
 Previously, the entire team was like a group of interested and motivated people curious to learn the art of mechatronics. We had no funds at all, no guidance other than what I and Arjun used to teach the juniors, no support from the college or any other institute but we still worked. We worked hard without any expectations like a blind man fondering in the dark. All my juniors had pinned their hopes on me and I had nothing for them except disappointment and utter failure. 
 
-Soon I realized, NARM was going nowhere. NARM was created with a vision in mind - _the first research group where people not just learnt for the fun of learning but contributed to actual research in robotics_. We were neither a team nor a club nor a forum but a combination of all three. But to realize that vision, I had to be more than I was then. I needed to evolve myself and learn more to do stuff that had an impact in the world. I needed to understand research that could contribute to the world. Only then could I take the responsibility to guide others. I was so burdened with this thought that I had to take the long road to knowledge. Then came another obstacle- from where will you learn. Of course, professors in my college knew very little about robotics. Seniors, well, they only know what are taught in the workshops. The only option left is to take external help - Internships.
+Soon I realized, NARM was going nowhere. NARM was created with a vision in mind - _a research group hobbyists worked together in contributing to actual research in robotics_. We were neither a team nor a club nor a forum nor a startup but a combination of all of them. But to realize that vision, I had to be more than I was then. I needed to evolve myself and learn more to do stuff that had an impact in the world. I needed to understand research that could contribute to the world. Only then could I take the responsibility to guide others. I was so burdened with this thought that I had to take the long road to knowledge. Then came another obstacle- from where will you learn. Of course, professors in my college knew very little about robotics. Seniors, well, they only know what are taught in the workshops. The only option left is to take external help - Internships.
 
 
 >###Bhabha Atomic Research Center (BARC)
