--- a/_posts/2015-02-07-Last-Time.md
+++ b/_posts/2015-02-07-Last-Time.md
@@ -23,7 +23,7 @@ Check out [Project Auroman](http://projectauroman.blogspot.in/), if you have tim
 I had to learn more to make up for the time that I lost. I was looking for oppurtunities to learn more stuff. I applied to a lot of German Universities but sadly, got declined. I lost hope and applied to this startup Auro Robotics at IIT KGP and I got selected. I never had any hopes from a startup from IIT KGP where BARC scientists disappointed me. Nevertheless, I took a risk and dived in.
 
 >###Auro Robotics
->Well, I might have had little hopes from here but Auro Robotics astounded me. I learned a ton of stuff even while earning a stipend. Just amazing, I was getting paid to learn. First, I had to build up my C++ skills which were a disaster. So, I took the time and learned my way around good C++ programming. Next, I completed all the pending courses that I had not completed until now. IIT KGPians- you guys are lucky to have such high speed internet all the time. After, I cleared of my coding skills, I was given some hardware work on the vehicle steering. It exposed all my flaws in designing good hardware and I improved myself a lot. Jit is a brilliant and an amazing person who helped me a lot to understand how to properly lead a team. 
+>Well, I might have had little hopes from here but Auro Robotics astounded me. I learned a ton of stuff even while earning a stipend. Just amazing, I was getting paid to learn. First, I had to build up my C++ skills which were a disaster. So, I took the time and learned my way around good C++ programming. Next, I completed all the pending courses that I had not completed until now. IIT KGPians- you guys are lucky to have such high speed internet all the time. After, I was confident of my coding skills, I was given some hardware work on the vehicle steering. It exposed all my flaws in designing good hardware and I improved myself a lot. Jit is a brilliant and an amazing person who helped me a lot to understand how to properly lead a team. 
 ![_2](https://raw.githubusercontent.com/sgang007/sgang007.github.io/master/images/auro.jpg)
 
 Finally, after six months I was in a position to realize the vision I had long back.
