--- a/_posts/2015-02-07-Last-Time.md
+++ b/_posts/2015-02-07-Last-Time.md
@@ -30,7 +30,7 @@ Finally, after six months I was in a position to realize the vision I had long b
 I returned to my college and started working with Prof. Sandipan Karmakar who helped me a lot in undestanding the mathematics behind the working of the robot's brain. 
 
 ##NARM Sangi
-And after all the trouble, Project Sangi has started. The estimated budget of the project is very low and I have invested most of my earnings from KGP in this project. With help of Prof. Sandipan and some external aid if required, we should have a sufficient investment to build the first version of Sangi. We managed to get a room and lab for our work with high speed internet connectivity. Last of all, we have a well organized plan and a timeline to increase work productivity. If all goes well, we should have the first version ready by May, 2015 and two abstract for presenting to the next IEEE conference after June, 2015. 
+And after all the trouble, Project Sangi has started. The estimated budget of the project is very low and I have invested most of my earnings from KGP in this project. With help of Prof. Sandipan and some external aid if required, we should have a sufficient investment to build the first version of Sangi. We managed to get a room and lab for our work with high speed internet connectivity. Last of all, we have a well organized plan and a timeline to increase work productivity. If all goes well, we should have the first version ready by May, 2015 and two abstracts for presenting to the next IEEE conference after June, 2015. 
 
 Finally, I see the light simmering at the end of this dark tunnel I had been travelling all along and this new spark of hope gives me the energy and the confidence to once again believe: I can and I will do it, whatever it takes.
 
