--- a/_posts/2015-02-07-Last-Time.md
+++ b/_posts/2015-02-07-Last-Time.md
@@ -15,7 +15,7 @@ Soon I realized, NARM was going nowhere. NARM was created with a vision in mind 
 >I went to BARC with a lot of expectations. I was thirsty for knowledge and wanted to learn the art of robotics from the experts. Sadly, I was disappointed. Like all government bodies, it too had a slow working style. The scientists there were very theoretical in their knowledge of robotics and they were busy in getting papers published while the interns and junior scientists did most of the practical work.
 This was a good oppurtunity for me as I got access to very high end hardware which I could only dream of in college. I also got introduced to the Robot operating System, a software architecture built specifically to design robots. 
 
->But my enthusiasim and energy did not last long. I soon corrupted by the languid atmosphere, laid back lifestyle, loving friends and the amazing city, Mumbai. In no less than a few weeks, I lost all interest in my work and devoted my entire time to pleasure.
+>But my enthusiasim and energy did not last long. I soon got corrupted by the languid atmosphere, laid back lifestyle, loving friends and the amazing city, Mumbai. In no less than a few weeks, I lost all interest in my work and devoted my entire time to pleasure.
 After a month of enjoyment and fun, all my friends were gone as their college had reopened and I was left all alone. All my sense of purpose suddenly kicked in and within a week I managed to complete a majority of the project before the final presentation. Any ways, I got hands-on experience in working with autonomous navigation which helped me a lot.
 Check out [Project Auroman](http://projectauroman.blogspot.in/), if you have time.
 ![_1](https://raw.githubusercontent.com/sgang007/sgang007.github.io/master/images/barc.JPG)
